Generate Pelican site

--- a/en/index.html
+++ b/en/index.html
@@ -244,25 +244,25 @@
     <div class="row" id="destacados">
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 14.jpeg" alt="University News" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/en/theme/images/asset 14.jpeg" alt="University News" longdesc="servicios/actualidad">
           <h2 class="titulo">University News</h2>
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 15.jpeg" alt="University News" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/en/theme/images/asset 15.jpeg" alt="University News" longdesc="servicios/actualidad">
           <h2 class="titulo" id="agenda">Agenda</h2>
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 16.jpeg" alt="University News" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/en/theme/images/asset 16.jpeg" alt="University News" longdesc="servicios/actualidad">
           <h2 class="titulo">Videos</h2>
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 17.jpeg" alt="University News" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/en/theme/images/asset 17.jpeg" alt="University News" longdesc="servicios/actualidad">
           <h2 class="titulo" id="ciencia">Science at UCO</h2>
         </a>
       </div>
@@ -275,7 +275,7 @@
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
               <a href="https://davidvm29.github.io/pelican/en/en/noticia6-en.html">
-                  <img src="/theme/images/noticia6.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/images/noticia6.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
                   <a style="color: #575756;" href="https://davidvm29.github.io/pelican/en/en/noticia6-en.html">
@@ -288,7 +288,7 @@
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
               <a href="https://davidvm29.github.io/pelican/en/en/noticia4-en.html">
-                  <img src="/theme/images/noticia4.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/images/noticia4.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
                   <a style="color: #575756;" href="https://davidvm29.github.io/pelican/en/en/noticia4-en.html">
@@ -301,7 +301,7 @@
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
               <a href="https://davidvm29.github.io/pelican/en/en/noticia3-en.html">
-                  <img src="/theme/images/noticia3.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/images/noticia3.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
                   <a style="color: #575756;" href="https://davidvm29.github.io/pelican/en/en/noticia3-en.html">
@@ -314,7 +314,7 @@
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
               <a href="https://davidvm29.github.io/pelican/en/en/noticia5-en.html">
-                  <img src="/theme/images/noticia5.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/images/noticia5.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
                   <a style="color: #575756;" href="https://davidvm29.github.io/pelican/en/en/noticia5-en.html">
