--- a/es/index.html
+++ b/es/index.html
@@ -244,25 +244,25 @@
     <div class="row" id="destacados">
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 14.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/es/theme/images/asset 14.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
           <h2 class="titulo">Actualidad Universitaria</h2>
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 15.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/es/theme/images/asset 15.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
           <h2 class="titulo" id="agenda">Agenda</h2>
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 16.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/es/theme/images/asset 16.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
           <h2 class="titulo">Vídeos</h2>
         </a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
         <a href="servicios/actualidad">
-          <img class="custom-img" src="/theme/images/asset 17.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
+          <img class="custom-img" src="https://davidvm29.github.io/pelican/es/theme/images/asset 17.jpeg" alt="Actualidad Universitaria" longdesc="servicios/actualidad">
           <h2 class="titulo" id="ciencia">Ciencia en la UCO</h2>
         </a>
       </div>
