Generate Pelican site

--- a/en/categories.html
+++ b/en/categories.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
- <title>My site - Categories</title>
+ <title>My Site in English - Categories</title>
 </head>
 <body>
  <div class="container">
-    <h2>Categories on My site</h2>
+    <h2>Categories on My Site in English</h2>
     <ul>
         <li><a href="https://davidvm29.github.io/pelican/en/category/en.html">en</a> (8)</li>
     </ul>
