--- a/es/archives.html
+++ b/es/archives.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
- <title>Mi Sitio - Archives</title>
+ <title>Mi Sitio en Español - Archives</title>
 </head>
 <body>
  <div class="container">
-<h2>Archives for Mi Sitio</h2>
+<h2>Archives for Mi Sitio en Español</h2>
 
 <dl>
     <dt>sá. 09 marzo 2024</dt>
