--- a/es/authors.html
+++ b/es/authors.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
- <title>Mi Sitio - Authors</title>
+ <title>Mi Sitio en Español - Authors</title>
 </head>
 <body>
  <div class="container">
-    <h2>Authors on Mi Sitio</h2>
+    <h2>Authors on Mi Sitio en Español</h2>
     <ul>
         <li><a href="https://davidvm29.github.io/pelican/es/author/david-villen-moreno.html">David Villen Moreno</a> (8)</li>
     </ul>
