--- a/es/categories.html
+++ b/es/categories.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
- <title>Mi Sitio - Categories</title>
+ <title>Mi Sitio en Español - Categories</title>
 </head>
 <body>
  <div class="container">
-    <h2>Categories on Mi Sitio</h2>
+    <h2>Categories on Mi Sitio en Español</h2>
     <ul>
         <li><a href="https://davidvm29.github.io/pelican/es/category/es.html">es</a> (8)</li>
     </ul>
