--- a/en/archives.html
+++ b/en/archives.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
- <title>My site - Archives</title>
+ <title>My Site in English - Archives</title>
 </head>
 <body>
  <div class="container">
-<h2>Archives for My site</h2>
+<h2>Archives for My Site in English</h2>
 
 <dl>
-    <dt>sá. 09 marzo 2024</dt>
+    <dt>Sat 09 March 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/en/noticiasfiltradas-en.html">noticiasFiltradas-en</a></dd>
-    <dt>sá. 09 marzo 2024</dt>
+    <dt>Sat 09 March 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/en/resultadosbusqueda-en.html">resultadosBusqueda-en</a></dd>
-    <dt>ju. 07 marzo 2024</dt>
+    <dt>Thu 07 March 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/en/historia-en.html">historia-en</a></dd>
-    <dt>ma. 27 febrero 2024</dt>
+    <dt>Tue 27 February 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/en/index.html">index</a></dd>
-    <dt>ma. 27 febrero 2024</dt>
+    <dt>Tue 27 February 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/en/noticia3-en.html">noticia3-en</a></dd>
-    <dt>lu. 12 febrero 2024</dt>
+    <dt>Mon 12 February 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/en/noticia4-en.html">noticia4-en</a></dd>
-    <dt>lu. 12 febrero 2024</dt>
+    <dt>Mon 12 February 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/en/noticia5-en.html">noticia5-en</a></dd>
-    <dt>vi. 24 noviembre 2023</dt>
+    <dt>Fri 24 November 2023</dt>
     <dd><a href="https://davidvm29.github.io/pelican/en/noticia6-en.html">noticia6-en</a></dd>
 </dl>
  </div> 
