--- a/en/authors.html
+++ b/en/authors.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
- <title>My site - Authors</title>
+ <title>My Site in English - Authors</title>
 </head>
 <body>
  <div class="container">
-    <h2>Authors on My site</h2>
+    <h2>Authors on My Site in English</h2>
     <ul>
         <li><a href="https://davidvm29.github.io/pelican/en/author/david-villen-moreno.html">David Villen Moreno</a> (8)</li>
     </ul>
