--- a/en/noticia6-en.html
+++ b/en/noticia6-en.html
@@ -112,7 +112,7 @@
         <a href="mailto:?subject=Sara Muñoz Porras, re-elected president of the UCO Student Council (CEUCO)&body=Echale un vistazo a la siguiente noticia: https://davidvm29.github.io/pelican/en/noticia6-en.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://davidvm29.github.io/pelican/en/noticia6-en.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
         <a href="https://twitter.com/intent/tweet?url=https://davidvm29.github.io/pelican/en/noticia6-en.html&text=Sara Muñoz Porras, re-elected president of the UCO Student Council (CEUCO)" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://davidvm29.github.io/pelican/en/noticia6-en.html&title=Sara Muñoz Porras, re-elected president of the UCO Student Council (CEUCO)&summary=&source=My site" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://davidvm29.github.io/pelican/en/noticia6-en.html&title=Sara Muñoz Porras, re-elected president of the UCO Student Council (CEUCO)&summary=&source=My Site in English" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
       </div>
 
   <div style="margin-bottom: 20px;"class="hastag">
