--- a/en/tags.html
+++ b/en/tags.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
- <title>My site - Tags</title>
+ <title>My Site in English - Tags</title>
 </head>
 <body>
  <div class="container">
-    <h2>Tags for My site</h2>
+    <h2>Tags for My Site in English</h2>
     <ul>
         <li><a href="https://davidvm29.github.io/pelican/en/tag/academic-organization.html">academic organization</a> (1)</li>
         <li><a href="https://davidvm29.github.io/pelican/en/tag/aupa.html">Aupa</a> (2)</li>
