--- a/es/tags.html
+++ b/es/tags.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
- <title>Mi Sitio - Tags</title>
+ <title>Mi Sitio en Español - Tags</title>
 </head>
 <body>
  <div class="container">
-    <h2>Tags for Mi Sitio</h2>
+    <h2>Tags for Mi Sitio en Español</h2>
     <ul>
         <li><a href="https://davidvm29.github.io/pelican/es/tag/aupa.html">Aupa</a> (2)</li>
         <li><a href="https://davidvm29.github.io/pelican/es/tag/ceuco.html">CEUCO</a> (1)</li>
