--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="top-bar">
 					<ul id="idiomas">
 						<li class="activo"><a href="https://davidvm29.github.io/pelican/index.html">ES</a></li>
-						<li><a href="https://davidvm29.github.io/pelican/en/">EN</a></li>
+						<li><a href="https://davidvm29.github.io/pelican/en">EN</a></li>
 					</ul>
 					<div id="buscar">
 							<a class="boton-buscar"></a>
