--- a/es/index.html
+++ b/es/index.html
@@ -17,7 +17,7 @@
 <body>
   <div id="top-bar">
 					<ul id="idiomas">
-						<li class="activo"><a href="https://davidvm29.github.io/pelican/es/index.html">ES</a></li>
+						<li class="activo"><a href="/index.html">ES</a></li>
 						<li><a href="https://davidvm29.github.io/pelican/es/en/index.html">EN</a></li>
 					</ul>
 					<div id="buscar">
