Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -7,7 +7,7 @@
  <div class="container">
     <h2>Authors on ucoPelican</h2>
     <ul>
-        <li><a href="https://davidvm29.github.io/pelican/author/david-villen-moreno.html">David Villen Moreno</a> (8)</li>
+        <li><a href="/author/david-villen-moreno.html">David Villen Moreno</a> (8)</li>
     </ul>
  </div> 
 </body>
