--- a/en/archives.html
+++ b/en/archives.html
@@ -9,21 +9,21 @@
 
 <dl>
     <dt>Sat 09 March 2024</dt>
-    <dd><a href="https://davidvm29.github.io/pelican/en/noticiasfiltradas-en.html">noticiasFiltradas-en</a></dd>
+    <dd><a href="/en/noticiasfiltradas-en.html">noticiasFiltradas-en</a></dd>
     <dt>Sat 09 March 2024</dt>
-    <dd><a href="https://davidvm29.github.io/pelican/en/resultadosbusqueda-en.html">resultadosBusqueda-en</a></dd>
+    <dd><a href="/en/resultadosbusqueda-en.html">resultadosBusqueda-en</a></dd>
     <dt>Thu 07 March 2024</dt>
-    <dd><a href="https://davidvm29.github.io/pelican/en/historia-en.html">historia-en</a></dd>
+    <dd><a href="/en/historia-en.html">historia-en</a></dd>
     <dt>Tue 27 February 2024</dt>
-    <dd><a href="https://davidvm29.github.io/pelican/en/index.html">index</a></dd>
+    <dd><a href="/en/index.html">index</a></dd>
     <dt>Tue 27 February 2024</dt>
-    <dd><a href="https://davidvm29.github.io/pelican/en/noticia3-en.html">noticia3-en</a></dd>
+    <dd><a href="/en/noticia3-en.html">noticia3-en</a></dd>
     <dt>Mon 12 February 2024</dt>
-    <dd><a href="https://davidvm29.github.io/pelican/en/noticia4-en.html">noticia4-en</a></dd>
+    <dd><a href="/en/noticia4-en.html">noticia4-en</a></dd>
     <dt>Mon 12 February 2024</dt>
-    <dd><a href="https://davidvm29.github.io/pelican/en/noticia5-en.html">noticia5-en</a></dd>
+    <dd><a href="/en/noticia5-en.html">noticia5-en</a></dd>
     <dt>Fri 24 November 2023</dt>
-    <dd><a href="https://davidvm29.github.io/pelican/en/noticia6-en.html">noticia6-en</a></dd>
+    <dd><a href="/en/noticia6-en.html">noticia6-en</a></dd>
 </dl>
  </div> 
 </body>
