--- a/en/categories.html
+++ b/en/categories.html
@@ -7,7 +7,7 @@
  <div class="container">
     <h2>Categories on My Site in English</h2>
     <ul>
-        <li><a href="https://davidvm29.github.io/pelican/en/category/en.html">en</a> (8)</li>
+        <li><a href="/en/category/en.html">en</a> (8)</li>
     </ul>
  </div> 
 </body>
