--- a/noticia4.html
+++ b/noticia4.html
@@ -161,10 +161,10 @@
 
       <div class="share-links">
         <p>Comparte en:</p>
-        <a href="mailto:?subject=La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE&body=Echale un vistazo a la siguiente noticia: https://davidvm29.github.io/pelican/noticia4.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://davidvm29.github.io/pelican/noticia4.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/intent/tweet?url=https://davidvm29.github.io/pelican/noticia4.html&text=La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://davidvm29.github.io/pelican/noticia4.html&title=La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE&summary=<h3>En la última edición del  ranking, la UCO mejora su clasificación, pasando del puesto 772 al 744. A nivel nacional se sitúa en el puesto 16 y continúa siendo la segunda de Andalucía.</h3>
+        <a href="mailto:?subject=La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE&body=Echale un vistazo a la siguiente noticia: /noticia4.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=/noticia4.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com/intent/tweet?url=/noticia4.html&text=La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=/noticia4.html&title=La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE&summary=<h3>En la última edición del  ranking, la UCO mejora su clasificación, pasando del puesto 772 al 744. A nivel nacional se sitúa en el puesto 16 y continúa siendo la segunda de Andalucía.</h3>
 <p>La Universidad de Córdoba mantiene su posición entre las 800 mejores universidades del mundo, según la última …</p>&source=ucoPelican" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
       </div>
 
