--- a/tags.html
+++ b/tags.html
@@ -7,21 +7,21 @@
  <div class="container">
     <h2>Tags for ucoPelican</h2>
     <ul>
-        <li><a href="https://davidvm29.github.io/pelican/tag/aupa.html">Aupa</a> (2)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/ceuco.html">CEUCO</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/estudiantes.html">estudiantes</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/fotografia.html">fotografía</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/gervasio-sanchez.html">Gervasio Sánchez</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/laucoenabierto.html">laucoenabierto</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/ordenacion-academica.html">ordenación académica</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/ranking-the.html">ranking THE</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/rankings.html">ránkings</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/representacion-estudiantil.html">representacion estudiantil</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/titulaciones.html">Titulaciones</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/uco.html">UCO</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/universidades-privadas.html">universidades privadas</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/universidades-publicas-de-andalucia.html">Universidades Públicas de Andalucía</a> (1)</li>
-        <li><a href="https://davidvm29.github.io/pelican/tag/video.html">vídeo</a> (1)</li>
+        <li><a href="/tag/aupa.html">Aupa</a> (2)</li>
+        <li><a href="/tag/ceuco.html">CEUCO</a> (1)</li>
+        <li><a href="/tag/estudiantes.html">estudiantes</a> (1)</li>
+        <li><a href="/tag/fotografia.html">fotografía</a> (1)</li>
+        <li><a href="/tag/gervasio-sanchez.html">Gervasio Sánchez</a> (1)</li>
+        <li><a href="/tag/laucoenabierto.html">laucoenabierto</a> (1)</li>
+        <li><a href="/tag/ordenacion-academica.html">ordenación académica</a> (1)</li>
+        <li><a href="/tag/ranking-the.html">ranking THE</a> (1)</li>
+        <li><a href="/tag/rankings.html">ránkings</a> (1)</li>
+        <li><a href="/tag/representacion-estudiantil.html">representacion estudiantil</a> (1)</li>
+        <li><a href="/tag/titulaciones.html">Titulaciones</a> (1)</li>
+        <li><a href="/tag/uco.html">UCO</a> (1)</li>
+        <li><a href="/tag/universidades-privadas.html">universidades privadas</a> (1)</li>
+        <li><a href="/tag/universidades-publicas-de-andalucia.html">Universidades Públicas de Andalucía</a> (1)</li>
+        <li><a href="/tag/video.html">vídeo</a> (1)</li>
     </ul>
  </div> 
 </body>
