--- a/categories.html
+++ b/categories.html
@@ -7,7 +7,7 @@
  <div class="container">
     <h2>Categories on ucoPelican</h2>
     <ul>
-        <li><a href="https://davidvm29.github.io/pelican/category/es.html">es</a> (8)</li>
+        <li><a href="/category/es.html">es</a> (8)</li>
     </ul>
  </div> 
 </body>
