--- a/en/authors.html
+++ b/en/authors.html
@@ -7,7 +7,7 @@
  <div class="container">
     <h2>Authors on My Site in English</h2>
     <ul>
-        <li><a href="https://davidvm29.github.io/pelican/en/author/david-villen-moreno.html">David Villen Moreno</a> (8)</li>
+        <li><a href="/en/author/david-villen-moreno.html">David Villen Moreno</a> (8)</li>
     </ul>
  </div> 
 </body>
