--- a/es/categories.html
+++ b/es/categories.html
@@ -7,7 +7,7 @@
  <div class="container">
     <h2>Categories on Mi Sitio en Español</h2>
     <ul>
-        <li><a href="https://davidvm29.github.io/pelican/es/category/es.html">es</a> (8)</li>
+        <li><a href="/es/category/es.html">es</a> (8)</li>
     </ul>
  </div> 
 </body>
