--- a/noticia5.html
+++ b/noticia5.html
@@ -109,10 +109,10 @@
 
       <div class="share-links">
         <p>Comparte en:</p>
-        <a href="mailto:?subject=#LaUCOenAbierto I Luz de las vidas minadas&body=Echale un vistazo a la siguiente noticia: https://davidvm29.github.io/pelican/noticia5.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://davidvm29.github.io/pelican/noticia5.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/intent/tweet?url=https://davidvm29.github.io/pelican/noticia5.html&text=#LaUCOenAbierto I Luz de las vidas minadas" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://davidvm29.github.io/pelican/noticia5.html&title=#LaUCOenAbierto I Luz de las vidas minadas&summary=<p>Hace más de veinticinco años, el <a href="#">fotógrafo Gervasio Sánchez</a> comenzó a documentar los efectos de las minas antipersona en la población de lugares con conflictos bélicos. Se trata de un trabajo periodístico que ha ido desarrollando durante un cuarto de siglo, adentrándose con empatía en las vidas de sus protagonistas …</p>&source=ucoPelican" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
+        <a href="mailto:?subject=#LaUCOenAbierto I Luz de las vidas minadas&body=Echale un vistazo a la siguiente noticia: /noticia5.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=/noticia5.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com/intent/tweet?url=/noticia5.html&text=#LaUCOenAbierto I Luz de las vidas minadas" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=/noticia5.html&title=#LaUCOenAbierto I Luz de las vidas minadas&summary=<p>Hace más de veinticinco años, el <a href="#">fotógrafo Gervasio Sánchez</a> comenzó a documentar los efectos de las minas antipersona en la población de lugares con conflictos bélicos. Se trata de un trabajo periodístico que ha ido desarrollando durante un cuarto de siglo, adentrándose con empatía en las vidas de sus protagonistas …</p>&source=ucoPelican" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
       </div>
 
   <div style="margin-bottom: 20px;"class="hastag">
