Generate Pelican site

--- a/es/archives.html
+++ b/es/archives.html
@@ -9,21 +9,21 @@
 
 <dl>
     <dt>sá. 09 marzo 2024</dt>
-    <dd><a href="/es/noticiasfiltradas.html">noticiasFiltradas</a></dd>
+    <dd><a href="https://davidvm29.github.io/pelican/es/noticiasfiltradas.html">noticiasFiltradas</a></dd>
     <dt>sá. 09 marzo 2024</dt>
-    <dd><a href="/es/resultadosbusqueda.html">resultadosBusqueda</a></dd>
+    <dd><a href="https://davidvm29.github.io/pelican/es/resultadosbusqueda.html">resultadosBusqueda</a></dd>
     <dt>ju. 07 marzo 2024</dt>
-    <dd><a href="/es/historia.html">historia</a></dd>
+    <dd><a href="https://davidvm29.github.io/pelican/es/historia.html">historia</a></dd>
     <dt>ma. 27 febrero 2024</dt>
-    <dd><a href="/es/index.html">index</a></dd>
+    <dd><a href="https://davidvm29.github.io/pelican/es/index.html">index</a></dd>
     <dt>ma. 27 febrero 2024</dt>
-    <dd><a href="/es/noticia3.html">noticia3</a></dd>
+    <dd><a href="https://davidvm29.github.io/pelican/es/noticia3.html">noticia3</a></dd>
     <dt>lu. 12 febrero 2024</dt>
-    <dd><a href="/es/noticia4.html">noticia4</a></dd>
+    <dd><a href="https://davidvm29.github.io/pelican/es/noticia4.html">noticia4</a></dd>
     <dt>lu. 12 febrero 2024</dt>
-    <dd><a href="/es/noticia5.html">noticia5</a></dd>
+    <dd><a href="https://davidvm29.github.io/pelican/es/noticia5.html">noticia5</a></dd>
     <dt>vi. 24 noviembre 2023</dt>
-    <dd><a href="/es/noticia6.html">noticia6</a></dd>
+    <dd><a href="https://davidvm29.github.io/pelican/es/noticia6.html">noticia6</a></dd>
 </dl>
  </div> 
 </body>
