--- a/en/noticia3-en.html
+++ b/en/noticia3-en.html
@@ -114,10 +114,10 @@
 
       <div class="share-links">
         <p>Comparte en:</p>
-        <a href="mailto:?subject=The Andalusian rectors address the new degree map and ask for equality with respect to private universities&body=Echale un vistazo a la siguiente noticia: /en/noticia3-en.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=/en/noticia3-en.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/intent/tweet?url=/en/noticia3-en.html&text=The Andalusian rectors address the new degree map and ask for equality with respect to private universities" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url=/en/noticia3-en.html&title=The Andalusian rectors address the new degree map and ask for equality with respect to private universities&summary=<h3>AUPA aims to “make a logical, coherent and responsible offer” of degrees and calls for “quality, strategy and equal conditions” with respect to private universities.</h3>
+        <a href="mailto:?subject=The Andalusian rectors address the new degree map and ask for equality with respect to private universities&body=Echale un vistazo a la siguiente noticia: https://davidvm29.github.io/pelican/en/noticia3-en.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://davidvm29.github.io/pelican/en/noticia3-en.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com/intent/tweet?url=https://davidvm29.github.io/pelican/en/noticia3-en.html&text=The Andalusian rectors address the new degree map and ask for equality with respect to private universities" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://davidvm29.github.io/pelican/en/noticia3-en.html&title=The Andalusian rectors address the new degree map and ask for equality with respect to private universities&summary=<h3>AUPA aims to “make a logical, coherent and responsible offer” of degrees and calls for “quality, strategy and equal conditions” with respect to private universities.</h3>
 <p>The Association of Rectors of Andalusian Public Universities (AUPA) met today at the University of Cádiz to establish criteria from the Andalusian university system in …</p>&source=My Site in English" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
       </div>
 
