--- a/en/tags.html
+++ b/en/tags.html
@@ -7,21 +7,21 @@
  <div class="container">
     <h2>Tags for My Site in English</h2>
     <ul>
-        <li><a href="/en/tag/academic-organization.html">academic organization</a> (1)</li>
-        <li><a href="/en/tag/aupa.html">Aupa</a> (2)</li>
-        <li><a href="/en/tag/ceuco.html">CEUCO</a> (1)</li>
-        <li><a href="/en/tag/degrees.html">Degrees</a> (1)</li>
-        <li><a href="/en/tag/gervasio-sanchez.html">Gervasio Sánchez</a> (1)</li>
-        <li><a href="/en/tag/laucoenabierto.html">laucoenabierto</a> (1)</li>
-        <li><a href="/en/tag/photography.html">photography</a> (1)</li>
-        <li><a href="/en/tag/private-universities.html">private universities</a> (1)</li>
-        <li><a href="/en/tag/public-universities-of-andalusia.html">Public Universities of Andalusia</a> (1)</li>
-        <li><a href="/en/tag/ranking-the.html">ranking THE</a> (1)</li>
-        <li><a href="/en/tag/rankings.html">ránkings</a> (1)</li>
-        <li><a href="/en/tag/student-representation.html">student representation</a> (1)</li>
-        <li><a href="/en/tag/students.html">students</a> (1)</li>
-        <li><a href="/en/tag/uco.html">UCO</a> (1)</li>
-        <li><a href="/en/tag/video.html">video</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/academic-organization.html">academic organization</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/aupa.html">Aupa</a> (2)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/ceuco.html">CEUCO</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/degrees.html">Degrees</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/gervasio-sanchez.html">Gervasio Sánchez</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/laucoenabierto.html">laucoenabierto</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/photography.html">photography</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/private-universities.html">private universities</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/public-universities-of-andalusia.html">Public Universities of Andalusia</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/ranking-the.html">ranking THE</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/rankings.html">ránkings</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/student-representation.html">student representation</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/students.html">students</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/uco.html">UCO</a> (1)</li>
+        <li><a href="https://davidvm29.github.io/pelican/en/tag/video.html">video</a> (1)</li>
     </ul>
  </div> 
 </body>
