--- a/es/authors.html
+++ b/es/authors.html
@@ -7,7 +7,7 @@
  <div class="container">
     <h2>Authors on Mi Sitio en Español</h2>
     <ul>
-        <li><a href="/es/author/david-villen-moreno.html">David Villen Moreno</a> (8)</li>
+        <li><a href="https://davidvm29.github.io/pelican/es/author/david-villen-moreno.html">David Villen Moreno</a> (8)</li>
     </ul>
  </div> 
 </body>
