Generate Pelican site

--- a/es/index.html
+++ b/es/index.html
@@ -17,8 +17,8 @@
 <body>
   <div id="top-bar">
 					<ul id="idiomas">
-						<li class="activo"><a href="https://davidvm29.github.io/pelican/es/index.html">ES</a></li>
-						<li><a href="https://davidvm29.github.io/pelican/es/en/">EN</a></li>
+						<li class="activo"><a href="https://davidvm29.github.io/pelican/es/es/index.html">ES</a></li>
+            <li><a href="https://davidvm29.github.io/pelican/es/index.html">EN</a></li>
 					</ul>
 					<div id="buscar">
 							<a class="boton-buscar"></a>
