Generate Pelican site

--- a/en/noticia4-en.html
+++ b/en/noticia4-en.html
@@ -161,10 +161,10 @@
 
       <div class="share-links">
         <p>Comparte en:</p>
-        <a href="mailto:?subject=The University of Córdoba, among the 800 best universities in the world according to the latest THE ranking&body=Echale un vistazo a la siguiente noticia: /ucopelican.github.io/en/noticia4-en.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=/ucopelican.github.io/en/noticia4-en.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/intent/tweet?url=/ucopelican.github.io/en/noticia4-en.html&text=The University of Córdoba, among the 800 best universities in the world according to the latest THE ranking" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url=/ucopelican.github.io/en/noticia4-en.html&title=The University of Córdoba, among the 800 best universities in the world according to the latest THE ranking&summary=<h3>In the latest edition of the ranking, the UCO improves its classification, going from 772nd to 744th. At the national level it is ranked 16th and continues to be second in Andalusia.</h3>
+        <a href="mailto:?subject=The University of Córdoba, among the 800 best universities in the world according to the latest THE ranking&body=Echale un vistazo a la siguiente noticia: https://davidvm29.github.io/pelican/en/noticia4-en.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://davidvm29.github.io/pelican/en/noticia4-en.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com/intent/tweet?url=https://davidvm29.github.io/pelican/en/noticia4-en.html&text=The University of Córdoba, among the 800 best universities in the world according to the latest THE ranking" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://davidvm29.github.io/pelican/en/noticia4-en.html&title=The University of Córdoba, among the 800 best universities in the world according to the latest THE ranking&summary=<h3>In the latest edition of the ranking, the UCO improves its classification, going from 772nd to 744th. At the national level it is ranked 16th and continues to be second in Andalusia.</h3>
 <p>The University of Córdoba maintains its position among the 800 best universities in the world, according to the …</p>&source=My site" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
       </div>
 
