--- a/en/index.html
+++ b/en/index.html
@@ -5,7 +5,7 @@
   <title>UCO-pelican</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="/theme/css/style.css">
+  <link rel="stylesheet" type="text/css" href="https://davidvm29.github.io/pelican/en/theme/css/style.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -17,7 +17,7 @@
 <body>
   <div id="top-bar">
 					<ul id="idiomas">
-						<li class="activo"><a href="/ucopelican.github.io/en/index.html">ES</a></li>
+						<li class="activo"><a href="https://davidvm29.github.io/pelican/en/index.html">ES</a></li>
 						<li><a href="/en/">EN</a></li>
 					</ul>
 					<div id="buscar">
