--- a/en/index.html
+++ b/en/index.html
@@ -16,10 +16,11 @@
 </head>
 <body>
   <div id="top-bar">
-					<ul id="idiomas">
-						<li class="activo"><a href="https://davidvm29.github.io/pelican/en/index.html">ES</a></li>
-						<li><a href="https://davidvm29.github.io/pelican/en/en/">EN</a></li>
-					</ul>
+    <ul id="idiomas">
+          <li><a href="https://davidvm29.github.io/pelican/index.html">ES</a></li>
+          <li class="activo"><a href="https://davidvm29.github.io/pelican/en">EN</a></li>
+  </ul>
+  
 					<div id="buscar">
 							<a class="boton-buscar"></a>
 							<label for="q" style="display:none">Buscar</label>
