Generate Pelican site

--- a/en/index.html
+++ b/en/index.html
@@ -17,7 +17,7 @@
 <body>
   <div id="top-bar">
     <ul id="idiomas">
-          <li><a href="https://davidvm29.github.io/pelican/es/index.html">ES</a></li>
+          <li><a href="https://davidvm29.github.io/pelican/index.html">ES</a></li>
           <li class="activo"><a href="https://davidvm29.github.io/pelican/en">EN</a></li>
   </ul>
   
