Generate Pelican site

--- a/es/historia.html
+++ b/es/historia.html
@@ -17,12 +17,11 @@
 </head>
 <body>
     <div id="top-bar">
-          <li class="activo"><a href="https://davidvm29.github.io/pelican/es/historia.html">ES</a></li>
-          <li><a href="https://davidvm29.github.io/pelican/es/en/historia-en.html">EN</a></li>
-        <!-- <ul id="idiomas">
-            <li class="activo"><a href="https://davidvm29.github.io/pelican/es/historia.html">ES</a></li>
-            <li><a href="https://davidvm29.github.io/pelican/es/en/historia-en.html">EN</a></li>
-        </ul> -->
+        
+        <ul id="idiomas">
+                <li class="activo"><a href="https://davidvm29.github.io/pelican/es/historia.html">ES</a></li>
+                <li><a href="https://davidvm29.github.io/pelican/es/en/historia-en.html">EN</a></li>
+        </ul>
         <div class="cita-previa-cont">
             <a href="https://citaprevia.gestion.uco.es/">Solicitar cita previa</a>
         </div>
@@ -44,7 +43,7 @@
 
   <nav class="row" id="menu-principal"><div id="menu-button" style="display:block;" bis_skin_checked="1">Menú</div>
     <ul class="open">
-        <li class="home"style="vertical-aling: middle;"></style><a href="https://davidvm29.github.io/pelican/es/index.html" style="vertical-align: middle; height: 26px; width: 26px; text-align: left;"><img src="/theme/images/icon-home.png" alt="Inicio" width="26" height="26"></a></li>
+        <li class="home"style="vertical-aling: middle;"></style><a href="https://davidvm29.github.io/pelican/es/index.html" style="vertical-align: middle; height: 26px; width: 26px; text-align: left;"><img src="https://davidvm29.github.io/pelican/es/theme/images/icon-home.png" alt="Inicio" width="26" height="26"></a></li>
         <li><a href="historia-y-video-promocional.html">Historia</a></li>
         <!--<li class="activo"><a href="#">Organización institucional</a>-->
         <li class="has-sub"><span class="submenu-button"></span><a href="#">Organización institucional</a>
