--- a/drafts/historia-en-en.html
+++ b/drafts/historia-en-en.html
@@ -177,6 +177,6 @@
 <script>
     var idioma = 'en'
 </script>
-<script src="/theme/js/script.js"></script>
-<script src="/theme/js/search.js" type="text/javascript"></script>
+<script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
+<script src="https://davidvm29.github.io/pelican/theme/js/search.js" type="text/javascript"></script>
 </html>
