--- a/es/historia.html
+++ b/es/historia.html
@@ -177,6 +177,6 @@
 <script>
     var idioma = 'es'
 </script>
-<script src="/theme/js/script.js"></script>
-<script src="/theme/js/search.js" type="text/javascript"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/script.js"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/search.js" type="text/javascript"></script>
 </html>
