--- a/drafts/noticia6-en-en.html
+++ b/drafts/noticia6-en-en.html
@@ -103,7 +103,7 @@
     <div class="ultfechamodificada">
       <span>Modificado por última vez en Friday, November 24, 2023 09:46</span>
     </div>
-    <script type="text/javascript" src="http://www.websitegoodies.com/counter.php?id=75443&color=%231253bd"></script>
+    <script type="text/javascript" src="https://www.websitegoodies.com/counter.php?id=75443&color=%231253bd"></script>
     
     <div style="margin-top: 20px;">
 
