--- a/es/drafts/noticia3-en-en.html
+++ b/es/drafts/noticia3-en-en.html
@@ -108,7 +108,7 @@
     <div class="ultfechamodificada">
       <span>Modificado por última vez en Tuesday, 03 October 2023 13:14</span>
     </div>
-    <script type="text/javascript" src="http://www.websitegoodies.com/counter.php?id=75448&color=%231253bd"></script>
+    <script type="text/javascript" src="https://www.websitegoodies.com/counter.php?id=75448&color=%231253bd"></script>
     
     <div style="margin-top: 20px;">
 
