--- a/es/drafts/noticia5-en-en.html
+++ b/es/drafts/noticia5-en-en.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/theme/css/style.css">
+  <link rel="stylesheet" href="https://davidvm29.github.io/pelican/es/theme/css/style.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -18,8 +18,8 @@
 <body>
   <div id="top-bar">
 					<ul id="idiomas">
-						<li class="activo"><a href="/noticia5.html">ES</a></li>
-						<li><a href="/en/noticia5-en.html">EN</a></li>
+						<li class="activo"><a href="https://davidvm29.github.io/pelican/es/noticia5.html">ES</a></li>
+						<li><a href="https://davidvm29.github.io/pelican/es/en/noticia5-en.html">EN</a></li>
 					</ul>
 					<div id="buscar">
             <a class="boton-buscar"></a>
@@ -32,8 +32,8 @@
 
   <!-- Botones de enlace a páginas externas -->
   <div class="external-buttons">
-    <a href="/index.html"><img src="/theme/images/asset0.png" alt="Botón 1"></a>
-    <a href="/acercanuevo.html"><img src="/theme/images/asset1.png" alt="Botón 2"></a>
+    <a href="https://davidvm29.github.io/pelican/es/index.html"><img src="https://davidvm29.github.io/pelican/es/theme/images/asset0.png" alt="Botón 1"></a>
+    <a href="https://davidvm29.github.io/pelican/es/acercanuevo.html"><img src="https://davidvm29.github.io/pelican/es/theme/images/asset1.png" alt="Botón 2"></a>
 
   </div>
 
@@ -45,7 +45,7 @@
 
 <nav class="row" id="menu-principal"><div id="menu-button" style="display:block;" bis_skin_checked="1">Menú</div>
   <ul class="open">
-      <li><a href="/index.html">Inicio</a></li>
+      <li><a href="https://davidvm29.github.io/pelican/es/index.html">Inicio</a></li>
       <li><a href="#">Vida Académica</a></li>
       <li><a href="#">Ciencia</a></li>
       <li><a href="#">Institucional</a></li>
@@ -62,10 +62,10 @@
 <section id="principal" class="row">
 	<!-- Contenido principal existente... -->
 	<head>
-    <link rel="stylesheet" href="/theme/css/style.css">
+    <link rel="stylesheet" href="https://davidvm29.github.io/pelican/es/theme/css/style.css">
 </head>
 <div id="breadcrumbs">
-    <a href="/en/">Home</a>
+    <a href="https://davidvm29.github.io/pelican/es">Home</a>
     
       
       › #LaUCOenAbierto I Light of mined lives
@@ -88,7 +88,7 @@
 	  <div class="itemBody">
 		<figure class="imagen_contenido_noticia">
 		  <a data-k2-modal="image" href="/servicios/actualidad/media/k2/items/cache/a8111bab4c62ab7868529ac61cb9bb35_XL.jpg" title="Clic para vista previa de la imagen">
-			<img src=/theme/images/noticia5.jpg />
+			<img src=https://davidvm29.github.io/pelican/es/theme/images/noticia5.jpg />
 		  </a>
 		  <figcaption class="pie_contenido_noticia">Light of mined lives</figcaption>
 		</figure>
@@ -234,7 +234,7 @@ Ayudas financiadas por las subvenciones del Ministerio...</div>
       <div class="noticias-interes"><a class="enlaces-interes" href="/servicios/actualidad/uco-imagen-corporativa">CONSULTAS SOBRE ACCESIBILIDAD</a></div>
     </nav>
 </div>
-  <a href="#"><img style="height: 100px; width: 282px;"src="/theme/images/como-llegar.jpg"></a>
+  <a href="#"><img style="height: 100px; width: 282px;"src="https://davidvm29.github.io/pelican/es/theme/images/como-llegar.jpg"></a>
 	</section>
   </section>
 
@@ -270,9 +270,9 @@ Ayudas financiadas por las subvenciones del Ministerio...</div>
 <script>
   var idioma = 'en'
 </script>
-<script src="/theme/js/script.js"></script>
-<script src="/theme/js/calendar.js"></script>
-<script src="/theme/js/search.js" type="text/javascript"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/script.js"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/calendar.js"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/search.js" type="text/javascript"></script>
 
 </html>
   
