--- a/en/drafts/noticia3-es.html
+++ b/en/drafts/noticia3-es.html
@@ -18,8 +18,10 @@
 <body>
   <div id="top-bar">
 					<ul id="idiomas">
-						<li class="activo"><a href="https://davidvm29.github.io/pelican/en/noticia3.html">ES</a></li>
-						<li><a href="https://davidvm29.github.io/pelican/en/en/noticia3-en.html">EN</a></li>
+                <li class="activo"><a href="https://davidvm29.github.io/pelican/en/noticia3.html">ES</a></li>
+                <li><a href="https://davidvm29.github.io/pelican/en/en/noticia3-en.html">EN</a></li>
+						<!-- <li class="activo"><a href="https://davidvm29.github.io/pelican/en/noticia3.html">ES</a></li>
+						<li><a href="https://davidvm29.github.io/pelican/en/en/noticia3-en.html">EN</a></li> -->
 					</ul>
 					<div id="buscar">
             <a class="boton-buscar"></a>
