--- a/en/noticia4-en.html
+++ b/en/noticia4-en.html
@@ -18,8 +18,10 @@
 <body>
   <div id="top-bar">
 					<ul id="idiomas">
-						<li class="activo"><a href="https://davidvm29.github.io/pelican/en/noticia4.html">ES</a></li>
-						<li><a href="https://davidvm29.github.io/pelican/en/en/noticia4-en.html">EN</a></li>
+                <li><a href="https://davidvm29.github.io/pelican/noticia4.html">ES</a></li>
+                <li class="activo"><a href="https://davidvm29.github.io/pelican/en/noticia4-en.html">EN</a></li>
+						<!-- <li class="activo"><a href="https://davidvm29.github.io/pelican/en/noticia4.html">ES</a></li>
+						<li><a href="https://davidvm29.github.io/pelican/en/noticia4-en.html">EN</a></li> -->
 					</ul>
 					<div id="buscar">
             <a class="boton-buscar"></a>
@@ -186,16 +188,16 @@
     <div class="itemRelated">
       <h3>Related articles (by tag)</h3>
           <ul>
-                <li><a href="https://davidvm29.github.io/pelican/en/en/noticia3-en.html">The Andalusian rectors address the new degree map and ask for equality with respect to private universities</a></li>
+                <li><a href="https://davidvm29.github.io/pelican/en/noticia3-en.html">The Andalusian rectors address the new degree map and ask for equality with respect to private universities</a></li>
           </ul>
       
    </div>
 
     <div class="itemNavigation">
         <span class="itemNavigationTitle">More in this category:</span>
-            <a href="https://davidvm29.github.io/pelican/en/en/noticia3-en.html">The Andalusian rectors address the new degree map and ask for equality with respect to private universities</a>
-            <a href="https://davidvm29.github.io/pelican/en/en/noticia5-en.html">#LaUCOenAbierto I Light of mined lives</a>
-            <a href="https://davidvm29.github.io/pelican/en/en/noticia6-en.html">Sara Muñoz Porras, re-elected president of the UCO Student Council (CEUCO)</a>
+            <a href="https://davidvm29.github.io/pelican/en/noticia3-en.html">The Andalusian rectors address the new degree map and ask for equality with respect to private universities</a>
+            <a href="https://davidvm29.github.io/pelican/en/noticia5-en.html">#LaUCOenAbierto I Light of mined lives</a>
+            <a href="https://davidvm29.github.io/pelican/en/noticia6-en.html">Sara Muñoz Porras, re-elected president of the UCO Student Council (CEUCO)</a>
     </div>
 
     <div class="itemBackToTop">
