Generate Pelican site

--- a/drafts/noticia4-en-en.html
+++ b/drafts/noticia4-en-en.html
@@ -321,6 +321,7 @@ Ayudas financiadas por las subvenciones del Ministerio...</div>
 </body>
 <script>
   var idioma = 'en'
+  var SITEURL = 'https://davidvm29.github.io/pelican'
 </script>
 <script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/theme/js/calendar.js"></script>
