--- a/es/drafts/noticia5-en-en.html
+++ b/es/drafts/noticia5-en-en.html
@@ -271,6 +271,7 @@ Ayudas financiadas por las subvenciones del Ministerio...</div>
 </body>
 <script>
   var idioma = 'en'
+  var SITEURL = 'https://davidvm29.github.io/pelican/es'
 </script>
 <script src="https://davidvm29.github.io/pelican/es/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/es/theme/js/calendar.js"></script>
