--- a/en/drafts/noticia3-es.html
+++ b/en/drafts/noticia3-es.html
@@ -276,6 +276,7 @@ Aid financed by grants from the Ministry...</div>
 </body>
 <script>
   var idioma = 'es'
+  var SITEURL = 'https://davidvm29.github.io/pelican/en'
 </script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/calendar.js"></script>
