--- a/en/noticia4-en.html
+++ b/en/noticia4-en.html
@@ -338,6 +338,7 @@ Aid financed by grants from the Ministry...</div>
 </body>
 <script>
   var idioma = 'en'
+  var SITEURL = 'https://davidvm29.github.io/pelican/en'
 </script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/calendar.js"></script>
