--- a/es/noticia6.html
+++ b/es/noticia6.html
@@ -283,6 +283,7 @@ Ayudas financiadas por las subvenciones del Ministerio...</div>
 </body>
 <script>
   var idioma = 'es'
+  var SITEURL = 'https://davidvm29.github.io/pelican/es'
 </script>
 <script src="https://davidvm29.github.io/pelican/es/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/es/theme/js/calendar.js"></script>
