--- a/noticia4.html
+++ b/noticia4.html
@@ -338,6 +338,7 @@ Ayudas financiadas por las subvenciones del Ministerio...</div>
 </body>
 <script>
   var idioma = 'es'
+  var SITEURL = 'https://davidvm29.github.io/pelican'
 </script>
 <script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/theme/js/calendar.js"></script>
