Generate Pelican site

--- a/en/archives.html
+++ b/en/archives.html
@@ -22,7 +22,7 @@
     <dt>sá. 09 marzo 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/en/noticiasfiltradas-en.html">noticiasFiltradas-en</a></dd>
     <dt>sá. 09 marzo 2024</dt>
-    <dd><a href="https://davidvm29.github.io/pelican/en/resultadosbusqueda-en.html">resultadosBusqueda-en</a></dd>
+    <dd><a href="https://davidvm29.github.io/pelican/en/resultadosbusqueda-en.html">resultadosbusqueda-en</a></dd>
     <dt>ju. 07 marzo 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/en/historia-en.html">historia-en</a></dd>
     <dt>ma. 27 febrero 2024</dt>
