Generate Pelican site

--- a/es/archives.html
+++ b/es/archives.html
@@ -22,7 +22,7 @@
     <dt>sá. 09 marzo 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/es/noticiasfiltradas.html">noticiasFiltradas</a></dd>
     <dt>sá. 09 marzo 2024</dt>
-    <dd><a href="https://davidvm29.github.io/pelican/es/resultadosbusqueda.html">resultadosBusqueda</a></dd>
+    <dd><a href="https://davidvm29.github.io/pelican/es/resultadosbusqueda.html">resultadosbusqueda</a></dd>
     <dt>ju. 07 marzo 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/es/historia.html">historia</a></dd>
     <dt>ma. 27 febrero 2024</dt>
