--- a/archives.html
+++ b/archives.html
@@ -22,7 +22,7 @@
     <dt>sá. 09 marzo 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/noticiasfiltradas.html">noticiasFiltradas</a></dd>
     <dt>sá. 09 marzo 2024</dt>
-    <dd><a href="https://davidvm29.github.io/pelican/resultadosbusqueda.html">resultadosBusqueda</a></dd>
+    <dd><a href="https://davidvm29.github.io/pelican/resultadosbusqueda.html">resultadosbusqueda</a></dd>
     <dt>ju. 07 marzo 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/historia.html">historia</a></dd>
     <dt>ma. 27 febrero 2024</dt>
