--- a/drafts/noticia6-en-en.html
+++ b/drafts/noticia6-en-en.html
@@ -97,7 +97,9 @@
   
 		<!-- Item introtext -->
 		<div class="texto_noticia">
-		 
+		 <h3>Sara Muñoz Porras, a 5th year student of the joint itinerary of Translation and Interpretation and Hispanic Philology, has been proclaimed the new president of the Student Council of the University of Córdoba (CEUCO) by an absolute majority after the elections held last Tuesday, October 25.</h3>
+<p>Sara Muñoz was until now the director of the CEUCO Activities Committee and now succeeds Juan José Morente Collado in the position.</p>
+<p>The new president of CEUCO has commented that her objective this year is "to put an end to the reconstruction that Juanjo started last year because, without a doubt, we have recovered our work dynamics that he was looking for. In addition, training continues to be in our sights. Without it, the replacement would not be possible and, for example, I would not be here today, on the verge of major regulatory changes both internally by the new rectoral team, as well as at the regional and national level, and with a great team working behind me."</p>
 	  </div>
     <div class="InfoAdd">
       <h3>INFORMACIÓN ADICIONAL</h3>
