Generate Pelican site

--- a/es/index.html
+++ b/es/index.html
@@ -319,7 +319,7 @@
               </a>
               <figcaption class="image-caption text-left">
                   <a style="color: #575756;" href="https://davidvm29.github.io/pelican/es/noticia5.html">
-                      #LaUCOenAbierto I Luz de las vidas minadas
+                      "#LaUCOenAbierto I Luz de las vidas minadas"
                   </a>
               </figcaption>
           </figure>
